Added the sections to the HTML

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nutri Hacks</title>
 </head>
 <body>
-    
+    <nav class="nav-bar"></nav>
+    <section class="hero"></section>
+    <section class="from"></section>
+    <section class="what-we-do"></section>
+    <section class="price"></section>
+    <footer></footer>
 </body>
 </html>
