Created the hero branch - To work on the hero section

--- a/index.html
+++ b/index.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Nutri Hacks</title>
-</head>
-<body>
-    <nav class="nav-bar"></nav>
-    <section class="hero"></section>
+  </head>
+  <body>
+    <nav class="nav">
+        <div class="nav-bar width">
+            <div class="nav-bar__logo">
+                    <a href="#hero"
+                    ><img src="assets/images/SVG/Logo.svg" alt="Nutri hacks Logo"
+                    /></a>
+            </div>
+            <ul class="nav-bar__links">
+                <li class='nav-bar__links-el'>
+                    <a href="">about</a>
+                </li>
+                <li class='nav-bar__links-el'>
+                    <a href="">plans</a>
+                </li>
+                <li class='nav-bar__links-el'>
+                    <a href="">form</a>
+                </li>
+            </ul>
+            <span class="nav-bar__mail">contact:
+                <a class="nav-bar__mail-link" href="mailto:joseph@workit-app.com"
+                >joseph@workit-app.com
+                </a>
+            </span>
+        </div>
+    </div>
+    </nav>
+    <section class="hero" id="hero"></section>
     <section class="from"></section>
     <section class="what-we-do"></section>
     <section class="price"></section>
     <footer></footer>
-</body>
+  </body>
 </html>
