Added the basic HTML for the hero section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,23 @@
         </div>
     </div>
     </nav>
-    <section class="hero" id="hero"></section>
+    <section class="hero" id="hero">
+        <div class="hero__info">
+            <h1>Nutri Hacks</h1>
+            <h2>We care about making food <br> 
+            more interesting & dynamic.</h2>
+            <p>We make the food you can’t eat food you can with our food hacks, no more boring bland meals. We save you the hassle of buying and cooking your food so you have more time to train or look after yourself. Your time is precious!!</p>
+            <div class="hero__info-btn btn">contact us</div>
+            <div class="hero__info-btn-inactive">
+                <span class="hero__info-btn-inactive-1">We plan</span>
+                <span class="hero__info-btn-inactive-2">We cook</span>
+                <span class="hero__info-btn-inactive-3">We deliver</span>
+            </div>
+        </div>
+        <div class="hero__logo">
+            
+        </div>
+    </section>
     <section class="from"></section>
     <section class="what-we-do"></section>
     <section class="price"></section>
