Added images to the folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <ul class="nav-bar__links">
                 <li class='nav-bar__links-el'>
-                    <a href="">about</a>
+                    <a href="">Sunscription</a>
                 </li>
                 <li class='nav-bar__links-el'>
                     <a href="">plans</a>
@@ -34,12 +34,12 @@
         </div>
     </div>
     </nav>
-    <section class="hero" id="hero">
+    <section class="hero width" id="hero">
         <div class="hero__info">
-            <h1>Nutri Hacks</h1>
-            <h2>We care about making food <br> 
+            <h1 class="hero__info-heading">Nutri Hacks</h1>
+            <h2 class="hero__info-strapline">We care about making food <br> 
             more interesting & dynamic.</h2>
-            <p>We make the food you can’t eat food you can with our food hacks, no more boring bland meals. We save you the hassle of buying and cooking your food so you have more time to train or look after yourself. Your time is precious!!</p>
+            <p class="hero__info-p">We make the food you can’t eat food you can with our food hacks, no more boring bland meals. We save you the hassle of buying and cooking your food so you have more time to train or look after yourself. Your time is precious!!</p>
             <div class="hero__info-btn btn">contact us</div>
             <div class="hero__info-btn-inactive">
                 <span class="hero__info-btn-inactive-1">We plan</span>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="hero__logo">
-            
+            <img src="/assets/images/svg/hero-logo.svg" alt="">
         </div>
     </section>
     <section class="from"></section>
