Hero image: hero images have been put in place

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Nutri Hacks</title>
   </head>
   <body>
-    <nav class="nav">
+    <nav class="nav width">
         <div class="nav-bar width">
             <div class="nav-bar__logo">
                     <a href="#hero"
@@ -36,19 +36,19 @@
     </nav>
     <section class="hero width" id="hero">
         <div class="hero__info">
-            <h1 class="hero__info-heading">Nutri Hacks</h1>
-            <h2 class="hero__info-strapline">We care about making food <br> 
+            <h1 class="hero__info-heading margin">Nutri Hacks</h1>
+            <h2 class="hero__info-strapline margin">We care about making food <br> 
             more interesting & dynamic.</h2>
             <p class="hero__info-p">We make the food you can’t eat food you can with our food hacks, no more boring bland meals. We save you the hassle of buying and cooking your food so you have more time to train or look after yourself. Your time is precious!!</p>
-            <div class="hero__info-btn btn">contact us</div>
-            <div class="hero__info-btn-inactive">
-                <span class="hero__info-btn-inactive-1">We plan</span>
-                <span class="hero__info-btn-inactive-2">We cook</span>
-                <span class="hero__info-btn-inactive-3">We deliver</span>
-            </div>
+            <div class="hero__info-btn btn">Contact Us</div>
         </div>
         <div class="hero__logo">
-            <img src="/assets/images/svg/hero-logo.svg" alt="">
+            <img class="hero__logo-main" src="/assets/images/svg/hero-logo.svg" alt="">
+            <div class="hero__logo-btn-inactive">
+                <span class="hero__logo-btn-inactive-1 btn">We plan</span>
+                <span class="hero__logo-btn-inactive-2 btn">We cook</span>
+                <span class="hero__logo-btn-inactive-3 btn">We deliver</span>
+            </div>
         </div>
     </section>
     <section class="from"></section>
