Hero icons placed underneath the Logo adjusted in place

--- a/index.html
+++ b/index.html
@@ -39,19 +39,28 @@
             <h1 class="hero__info-heading margin">Nutri Hacks</h1>
             <h2 class="hero__info-strapline margin">We care about making food <br> 
             more interesting & dynamic.</h2>
-            <p class="hero__info-p">We make the food you can’t eat food you can with our food hacks, no more boring bland meals. We save you the hassle of buying and cooking your food so you have more time to train or look after yourself. Your time is precious!!</p>
+            <p class="hero__info-p margin">We make the food you can’t eat food you can with our food hacks, no more boring bland meals. We save you the hassle of buying and cooking your food so you have more time to train or look after yourself. Your time is precious!!</p>
             <div class="hero__info-btn btn">Contact Us</div>
         </div>
         <div class="hero__logo">
             <img class="hero__logo-main" src="/assets/images/svg/hero-logo.svg" alt="">
-            <div class="hero__logo-btn-inactive">
-                <span class="hero__logo-btn-inactive-1 btn">We plan</span>
-                <span class="hero__logo-btn-inactive-2 btn">We cook</span>
-                <span class="hero__logo-btn-inactive-3 btn">We deliver</span>
+            <div class="hero__logo-btn">
+                <div class="hero__logo-btn-inactive">
+                    <img class="hero__logo-btn-forks" src="/assets/images/svg/forks.svg" alt="">
+                    <span class="hero__logo-btn-inactive-1 btn">We plan</span>
+                </div>
+                <div class="hero__logo-btn-inactive">
+                    <img class="hero__logo-btn-cook" src="/assets/images/svg/cook.svg" alt="">
+                    <span class="hero__logo-btn-inactive-2 btn">We cook</span>
+                </div>
+                <div class="hero__logo-btn-inactive">
+                    <img class="hero__logo-btn-van" src="/assets/images/svg/van.svg" alt="">
+                    <span class="hero__logo-btn-inactive-3 btn">We deliver</span>
+                </div>
             </div>
         </div>
     </section>
-    <section class="from"></section>
+    <section class="form"></section>
     <section class="what-we-do"></section>
     <section class="price"></section>
     <footer></footer>
