Nav: corrected spelling mistake of subscrption

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <ul class="nav-bar__links">
                 <li class='nav-bar__links-el'>
-                    <a href="">Sunscription</a>
+                    <a href="">Subscription</a>
                 </li>
                 <li class='nav-bar__links-el'>
                     <a href="">plans</a>
@@ -60,14 +60,14 @@
             </div>
         </div>
     </section>
-    <section class="form">
+    <section class="form width">
         <div class="form__text">
-<h2>Let us know what you want</h2>
-<p>Never eat boring, bland food again. Complete this form & tell us what you would like to see in a plan and we will get our chefs to create a plan around that.</p>
-<div class="form__text-btn btn ">Fill out our form</div>
+<h2 class="form__text-header">Let us know what you want</h2>
+<p class="form__text-p">Never eat boring, bland food again. Complete this form & tell us what you would like to see in a plan and we will get our chefs to create a plan around that.</p>
+<div class="form__text-btn btn" href="www.google.com">Fill out our form</div>
 </div>
         <div class="form__video">
-            <video id="myVideo" width="320" height="600">
+            <video id="myVideo">
                 <source src="/assets/video/video.MP4" type="video/mp4">
                 Your browser does not support HTML5 video.
             </video>
