Created new branch what-we-do

--- a/index.html
+++ b/index.html
@@ -99,7 +99,21 @@
                 
             </div>
     </section>
-    <section class="what-we-do"></section>
+    <section class="what-we-do width">
+        <h2 class="what-we-do__heading">We create food plans for all</h2>
+        <div class="what-we-do__imgs">
+            <img src="/assets/images/png/meat-img.png" alt="">
+            <img src="/assets/images/png/pesc-img.png" alt="">
+            <img src="/assets/images/png/vegan-img.png" alt="">
+            <img src="/assets/images/png/veg-img.png" alt="">
+        </div>
+        <div class="what-we-do__boxes">
+            <img src="/assets/images/png/takeaway.png" alt="">
+            <img src="/assets/images/png/takeaway.png" alt="">
+            <img src="/assets/images/png/takeaway.png" alt="">
+            <img src="/assets/images/png/takeaway.png" alt="">
+        </div>
+    </section>
     <section class="price"></section>
     <footer></footer>
   </body>
