Bug fix: white space appearding to the right of the page, About section complete

--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
     <section class="hero width" id="hero">
         <div class="hero__info">
             <h1 class="hero__info-heading margin">Nutri Hacks</h1>
-            <h2 class="hero__info-strapline margin">We care about making food <br> 
-            more interesting & dynamic.</h2>
-            <p class="hero__info-p margin">We make the food you can’t eat food you can with our food hacks, no more boring bland meals. We save you the hassle of buying and cooking your food so you have more time to train or look after yourself. Your time is precious!!</p>
+            <h2 class="hero__info-strapline margin">We care about making the food you eat more healthy and interesting while saving you time and money</h2>
+            <p class="hero__info-p margin">Want to make the food you can’t eat, the food you can? Nutri Hacks will create you a healthy, macro-friendly meal plan based on what you like and deliver your food to your gym.</p>
             <div class="hero__info-btn btn">Contact Us</div>
         </div>
         <div class="hero__logo">
@@ -62,8 +61,8 @@
     </section>
     <section class="form width">
         <div class="form__text">
-<h2 class="form__text-header">Let us know what you want</h2>
-<p class="form__text-p">Never eat boring, bland food again. Complete this form & tell us what you would like to see in a plan and we will get our chefs to create a plan around that.</p>
+<h2 class="form__text-header">What do you want?</h2>
+<p class="form__text-p">Never eat boring bland food again. Complete this form to tell us what you would like to see in your plan and we will get our trained chefs to create it!</p>
 <div class="form__text-btn btn" href="www.google.com">Fill out our form</div>
 </div>
         <div class="form__video">
@@ -100,7 +99,7 @@
             </div>
     </section>
     <section class="what-we-do width">
-        <h2 class="what-we-do__heading">We create food plans for all</h2>
+        <h2 class="what-we-do__heading">We create food plans for all diets</h2>
         <div class="what-we-do__imgs">
             <img src="/assets/images/png/meat-img.png" alt="">
             <img src="/assets/images/png/pesc-img.png" alt="">
@@ -112,6 +111,24 @@
             <img src="/assets/images/png/takeaway.png" alt="">
             <img src="/assets/images/png/takeaway.png" alt="">
             <img src="/assets/images/png/takeaway.png" alt="">
+        </div>
+    </section>
+    <section class="about width">
+        <div class="about__chefs">
+            <img src="/assets/images/svg/cook.svg" alt="">
+            <div class="about__chefs-text">
+                <h2 class="about__chefs-text-header">Created by our trained chefs</h2>
+                <p class="about__chefs-text-p">Our trained chefs will design you a healthy, 
+                    nutritious meal plan fit for your lifestyle.</p>
+            </div>
+        </div>
+         <div class="about__gym">
+                <img src="/assets/images/svg/gym.svg" alt="">
+                <div class="about__gym-text">
+                    <h2 class="about__gym-text-header">Pick up from your local gym</h2>
+                    <p class="about__gym-text-p">You don’t even have to change your routine or worry about getting things delivered, just carry on as normal and we sort out the rest.</p>
+                </div>
+            
         </div>
     </section>
     <section class="price"></section>
