Added HTML for the price section, colour classes coded

--- a/index.html
+++ b/index.html
@@ -131,7 +131,20 @@
             
         </div>
     </section>
-    <section class="price"></section>
+    <section class="price">
+        <h2 class="price__header">Subscription</h1>
+        <p class="price__sub-header">Create a subscription so your meals<br/>
+             never stop.</p>
+        <div class="price__card blue">
+            <h2 class="price__card-header">student</h1>
+            <p class="price__card-price">£3.99<span>/meal</span></p>
+             <p class="price__card-details">Meals per day<span>3</span></p>
+             <p class="price__card-details">Delivaries<span>2</span></p>
+             <p class="price__card-details">Meal selection<span>X</span></p>
+             <p class="price__card-details">Snacks<span>X</span></p>
+             <div class="price__card-link btn-blue">order your meal here</div>  
+        </div>
+    </section>
     <footer></footer>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
