Footer section has been coded

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </li>
             </ul>
             <span class="nav-bar__mail">contact:
-                <a class="nav-bar__mail-link" href="mailto:joseph@workit-app.com"
-                >joseph@workit-app.com
+                <a class="nav-bar__mail-link" href="mailto:givemefood@nutrihacks.co.uk"
+                >givemefood@nutrihacks.co.uk
                 </a>
             </span>
         </div>
@@ -169,8 +169,25 @@
                                         </div>
                                     </div>
     </section>
-    <footer></footer>
+    <footer class="footer">
+        <div class="footer__logo">
+            <img src="/assets/images/svg/Logo.svg" alt="">
+        </div>
+        <div class="footer__social">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook-f"></i>
+        </div>
+        <span class="footer__contact">Contact Us:
+            <a class="footer__contact-link" href="mailto:givemefood@nutrihacks.co.uk"
+                >givemefood@nutrihacks.co.uk
+                </a>
+        </span>
+    </footer>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="/assets/js/script.js"></script>
+  <script
+    src="https://kit.fontawesome.com/cc9939a825.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
