Started doing break points for responsive design

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             </div>
             <ul class="nav-bar__links">
                 <li class='nav-bar__links-el'>
-                    <a href="">Subscription</a>
+                    <a href="#sub">Subscription</a>
                 </li>
                 <li class='nav-bar__links-el'>
-                    <a href="">plans</a>
+                    <a href="#plan">plans</a>
                 </li>
                 <li class='nav-bar__links-el'>
-                    <a href="">form</a>
+                    <a href="#form">form</a>
                 </li>
             </ul>
             <span class="nav-bar__mail">contact:
@@ -39,7 +39,9 @@
             <h1 class="hero__info-heading margin">Nutri Hacks</h1>
             <h2 class="hero__info-strapline margin">We care about making the food you eat more healthy and interesting while saving you time and money</h2>
             <p class="hero__info-p margin">Want to make the food you can’t eat, the food you can? Nutri Hacks will create you a healthy, macro-friendly meal plan based on what you like and deliver your food to your gym.</p>
-            <div class="hero__info-btn btn">Contact Us</div>
+            <div class="hero__info__btn">
+            <a id="btn" href="mailto:givemefood@nutrihacks.co.uk" class="hero__info__btn-btn btn">Contact Us</a>
+        </div>
         </div>
         <div class="hero__logo">
             <img class="hero__logo-main" src="/assets/images/svg/hero-logo.svg" alt="">
@@ -59,11 +61,13 @@
             </div>
         </div>
     </section>
-    <section class="form width">
+    <section class="form width" id="form">
         <div class="form__text">
 <h2 class="form__text-header">What do you want?</h2>
-<p class="form__text-p">Never eat boring bland food again. Complete this form to tell us what you would like to see in your plan and we will get our trained chefs to create it!</p>
-<div class="form__text-btn btn" href="www.google.com">Fill out our form</div>
+<p class="form__text-p">Complete this form telling us more about your lifestyle and nutritional needs, enabling us to better craft your perfect meal plan.</p>
+<div class="form__text__btn">
+<a class="form__text__btn-btn btn" >Fill out our form</a>
+</div>
 </div>
         <div class="form__video">
             <video id="myVideo">
@@ -98,8 +102,8 @@
                 
             </div>
     </section>
-    <section class="what-we-do width">
-        <h2 class="what-we-do__heading">We create food plans for all diets</h2>
+    <section class="what-we-do width" id="plan">
+        <h2 class="what-we-do__heading">We have crafted meal plans for all diets and allergies</h2>
         <div class="what-we-do__imgs">
             <img src="/assets/images/png/meat-img.png" alt="">
             <img src="/assets/images/png/pesc-img.png" alt="">
@@ -131,10 +135,10 @@
             
         </div>
     </section>
-    <section class="price width">
+    <section class="price width" id="sub">
         <h2 class="price__header">Subscription</h1>
-        <p class="price__sub-header">Create a subscription so your meals<br/>
-             never stop.</p>
+        <p class="price__sub-header">Pick your Nutritional Hacked subscription plan so <br/>your meals never stop.
+        </p>
         <div class="price__cards">
 
             <div class="price__card blue">
@@ -144,8 +148,8 @@
                 <p class="price__card-details">Delivaries<span>2</span></p>
                 <p class="price__card-details">Meal selection<span>X</span></p>
                 <p class="price__card-details">Snacks<span>X</span></p>
-            <div class="price__card-link btn-blue"><span>
-                            order your meal here</span></div>  
+                <a  href="mailto:givemefood@nutrihacks.co.uk" class="price__card-link btn-blue"><span>
+                    order your meal here</span></a>   
             </div>
             <div class="price__card orange">
                 <h2 class="price__card-header">professional</h1>
@@ -154,8 +158,8 @@
                 <p class="price__card-details">Delivaries<span>2</span></p>
                 <p class="price__card-details">Meal selection<span>Yes</span></p>
                 <p class="price__card-details">Snacks<span>X</span></p>
-            <div class="price__card-link btn-orange"><span>
-                                    order your meal here</span></div>  
+                <a  href="mailto:givemefood@nutrihacks.co.uk" class="price__card-link btn-orange"><span>
+                    order your meal here</span></a>   
             </div>
             <div class="price__card pink">
                 <h2 class="price__card-header">athlete</h1>
@@ -164,10 +168,13 @@
                 <p class="price__card-details">Delivaries<span>3</span></p>
                 <p class="price__card-details">Meal selection<span>Yes</span></p>
                 <p class="price__card-details">Snacks<span>Yes</span></p>
-                <div class="price__card-link btn-pink"><span>
-                       order your meal here</span></div>  
+                <a  href="mailto:givemefood@nutrihacks.co.uk" class="price__card-link btn-pink"><span>
+                       order your meal here</span></a>  
             </div>
         </div>
+        <div class="price__button">
+        <a class="price__button-btn btn" href="mailto:givemefood@nutrihacks.co.uk">Contact Us</a>
+       </div>
     </section>
     <footer class="footer">
         <div class="footer__logo">
